fix(header): fix mobile nav overflow-y issue

--- a/src/_sass/components/_header.scss
+++ b/src/_sass/components/_header.scss
@@ -41,9 +41,9 @@
     padding: 14.5px 0;
   }
   .navbar-collapse {
-    margin-left: -15px;
-    margin-right: -15px;
-    margin-top: 8px;
+    margin-left: -12px;
+    margin-right: -10px;
+    margin-top: 0;
   }
   .nav-fill .nav-item {
     text-align: left;
